--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "device-connector"
-version = "2.1.0"
+version = "2.2.0"
 authors = ["okubo <okubo@aptpod.co.jp>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -21,8 +21,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1"
 thiserror = "1"
-serde = "1"
-serde_derive = "1"
+serde = { version = "1", features = ["derive"] }
 serde_with = "2"
 serde_yaml = "0.9"
 serde_json = "1"
